WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69371
fix gtk breakage caused by changeset 96595
https://bugs.webkit.org/show_bug.cgi?id=69371
Summary
fix gtk breakage caused by changeset 96595
Gavin Peters
Reported
2011-10-04 13:48:36 PDT
fix gtk breakage caused by changeset 96595
Attachments
Patch
(1.43 KB, patch)
2011-10-04 13:50 PDT
,
Gavin Peters
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gavin Peters
Comment 1
2011-10-04 13:50:26 PDT
Created
attachment 109675
[details]
Patch
Gavin Peters
Comment 2
2011-10-04 13:56:26 PDT
Committed
r96641
: <
http://trac.webkit.org/changeset/96641
>
Adam Barth
Comment 3
2011-10-15 00:10:26 PDT
Comment on
attachment 109675
[details]
Patch Cleared review? from
attachment 109675
[details]
so that this bug does not appear in
http://webkit.org/pending-review
. If you would like this patch reviewed, please attach it to a new bug (or re-open this bug before marking it for review again).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug