fix gtk breakage caused by changeset 96595 https://bugs.webkit.org/show_bug.cgi?id=69371

ews did not catch build breakage in the gtk WebKitPluginProcess target; this patch removes
the pretty printer on gtk, which should fix the build on that platform.

Reviewed by NOBODY, this is a build fix.

* wtf/Assertions.cpp:

Canonical link: https://commits.webkit.org/85403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96641 268f45cc-cd09-0410-ab3c-d52691b4dbfc